--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,7 @@ add_executable(
         WebServer/WebServer.h
         WebServer/WebServer.cpp
         WebServer/main.cpp
-        WebServer/List_Timer.cpp WebServer/List_Timer.h fork.cpp)
+        WebServer/List_Timer.cpp WebServer/List_Timer.h test/fork.cpp
+        test/set_daemon.cpp
+        test/mutex_trylock.cpp
+        test/mutex_locker.cpp test/mutex_locker.cpp test/nomutex_locker.cpp)
